# Reasoning-Aware-Adaptive-Routing-for-Hybrid-GraphRAG

./: .env.example  .gitignore  CauHoiPhanBien_DapAn_NguyenDinhThanh_v2.docx  CauHoiPhanBien_NganGon_NguyenDinhThanh.docx  DEPLOYMENT_GUIDE.md  README.md  Script_ThuyetTrinh_NguyenDinhThanh_v2.docx  Slide_DoAnTotNghiep_NguyenDinhThanh.pptx  TaiLieuKyThuat_Code_NguyenDinhThanh.docx  build_graph.py  build_vectordb.py  clear_graph.py  dataset_report.md  demo_routing_cases.py  environment.yml  hybrid_rag.py  main.py  promt.md  pyproject.toml  requirements.txt  run_all_eval.bat  run_final_eval.ps1  run_final_eval.sh  run_test_demo.py  setup_core_graphrag.py  sysdescription.md  ~$iLieuKyThuat_Code_NguyenDinhThanh.docx
api/: auth.py  main.py
build_logs/: phapdien_graph_stats.json
configs/: build_kg_no_ner.yaml  config.yaml  config.yaml.example  config_en.yaml.example  config_hotpot.yaml.example  config_vimqa.yaml.example  temp_eval_config.yaml
crawlers/: github_crawler.py  hf_crawler.py  huggingface_crawler.py  legal_crawler.py  phapdien_crawler.py  vbpl_crawler.py
data/: README.md
docs/: AI(PM)_ver 2.3.tex  DATA_AVAILABILITY.md  DEMO.md  REPRODUCIBILITY.md  SETUP.md  architecture.md  backend_api_audit.md  biblio.bib  defense_evidence_pack.json  defense_evidence_pack.md  frontend_audit.md  paper_errata.md  phase5_reproducibility_report.md  presentation.nav  reproducibility_audit.md  review.md
evaluation/: README_legal_clarify_eval.md  conversation_ambiguity_eval.json  evaluate.py  legal_clarify_eval.json  metrics.py  run_full_eval.py  test_queries.json
experiments/: compute_dataset_statistics.py  run_routing_baselines.py
frontend/: package-lock.json  package.json  tsconfig.json
graph/: build_kg.py  graphrag_client.py  neo4j_client.py  setup_graphrag.py  sqlite_kg.py
graphrag_wrapper/: graphrag_client.py
(+440 files in other folders)
